--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,8 +47,13 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\scripts\CameraController.cs" />
+     <Compile Include="Assets\scripts\LockRotation.cs" />
+     <Compile Include="Assets\scripts\Marble.cs" />
+     <Compile Include="Assets\scripts\PickUp.cs" />
+     <Compile Include="Assets\scripts\PlayZoneGenerator.cs" />
      <Compile Include="Assets\scripts\PlayerController.cs" />
      <Compile Include="Assets\scripts\Tilter.cs" />
+     <Compile Include="Assets\scripts\Wall.cs" />
      <Compile Include="Assets\scripts\WinnerCircle.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/programs/unity-5.5.1f1/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
